<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectFragment">

    <Button
        android:id="@+id/button_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name" />


    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/Name_bottom"
        android:height="@dimen/Name_height"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/button_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_name" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name_input"
        app:layout_constraintBottom_toTopOf="@id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton" />

    <TextView
        android:id="@+id/textView_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/select_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yellow_frog"
        app:layout_constraintBottom_toTopOf="@id/radioButton"/>

    <TextView
        android:id="@+id/textView_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/character_select"
        app:layout_constraintBottom_toTopOf="@id/yellow_frog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/blue_frog"
        android:layout_width="@dimen/image_button"
        android:layout_height="@dimen/image_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"

        android:scaleType="fitXY"
        android:src="@drawable/blue_up"
        app:layout_constraintBottom_toTopOf="@id/textView_difficulty"
        app:layout_constraintEnd_toStartOf="@+id/yellow_frog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_character"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/yellow_frog"
        android:layout_width="@dimen/image_button"
        android:layout_height="@dimen/image_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/yellow_up"
        app:layout_constraintBottom_toTopOf="@id/textView_difficulty"
        app:layout_constraintEnd_toStartOf="@id/green_frog"
        app:layout_constraintStart_toEndOf="@id/blue_frog"
        app:layout_constraintTop_toBottomOf="@id/textView_character"
        android:contentDescription="TODO"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/green_frog"
        android:layout_width="@dimen/image_button"
        android:layout_height="@dimen/image_button"
        android:layout_below="@id/yellow_frog"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/green_up"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView_character"
        app:layout_constraintStart_toEndOf="@id/yellow_frog"
        app:layout_constraintBottom_toTopOf="@id/textView_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

    <RadioGroup
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_name"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/textView_difficulty"
        tools:ignore="MissingConstraints">


        <RadioButton
            android:id="@+id/button_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/button_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="HARD" />
    </RadioGroup>
    />



</androidx.constraintlayout.widget.ConstraintLayout>