...
        app:layout_constraintEnd_toEndOf="@id/score"
        app:layout_constraintStart_toStartOf="@id/score"
        app:layout_constraintTop_toBottomOf="@id/score"
        app:layout_constraintBottom_toTopOf="@id/goal"/>

    <TextView
        android:id="@+id/difficulty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        app:layout_constraintEnd_toEndOf="@id/difficulty"
        app:layout_constraintStart_toStartOf="@id/difficulty"
        app:layout_constraintTop_toBottomOf="@id/difficulty"
...
